--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
   "site": {
-    "title": "Geeky Nextjs",
+    "title": "Loki Atari: Blog",
     "base_url": "/",
     "favicon": "/images/favicon.png",
     "logo": "/images/logo.png",
     "logo_white": "/images/logo-light.png",
     "logo_width": "150",
     "logo_height": "39",
-    "logo_text": "Geeky"
+    "logo_text": "LokiAstari"
   },
   "settings": {
     "theme_switcher": true,
@@ -22,7 +22,7 @@
   },
   "params": {
     "tag_manager_id": "",
-    "footer_content": "Lorem ipsum dolor sit amt, conse adip iscing. donec iaculis tempasus laoreet. Libero ullam rgscper.",
+    "footer_content": "Simple is better, aliter timent nasi dracones",
     "copyright": "Designed and Developed By [Statichunt](https://statichunt.com/)"
   },
   "metadata": {
@@ -33,7 +33,7 @@
   "widgets": {
     "about": {
       "enable": true,
-      "content": "Lorem ipsum dolor sit amet, conse tfctetur adipiscing elit. Vel in in donec iaculis tempasus odio nunc laoreet . Libero ullam rgscorper."
+      "content": "Former code monkey looking to share his thoughts. Was an engineer for many years before moving onto building and training engineering teams. Occasionally will try and use this blog to share things I have been playing with :-)"
     },
     "featured_posts": {
       "enable": true,
