--- a/config/config.json
+++ b/config/config.json
@@ -54,7 +54,7 @@
   },
   "disqus": {
     "enable": true,
-    "shortname": "themefisher-template",
+    "shortname": "lokiastari",
     "settings": {}
   }
 }
