--- a/config/config.json
+++ b/config/config.json
@@ -14,8 +14,8 @@
     "default_theme": "system",
     "pagination": 6,
     "InnerPaginationOptions": {
-      "enableTop": false,
-      "enableBottom": true
+      "enableTop": true,
+      "enableBot": true
     },
     "summary_length": 200,
     "blog_folder": "posts"
